--- a/Questão 7/Questão 7.csproj
+++ b/Questão 7/Questão 7.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3A9D7223-2F7E-4F9C-929A-1DE39AD50E5F}</ProjectGuid>
+    <ProjectGuid>{10BA7B8F-79BB-4CB2-931D-0894646953FA}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Questão_6</RootNamespace>
-    <AssemblyName>Questão 6</AssemblyName>
+    <RootNamespace>Questão_7</RootNamespace>
+    <AssemblyName>Questão_7</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,9 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Biblioteca.cs" />
-    <Compile Include="Livro.cs" />
-    <Compile Include="Teste.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
